--- a/.github/DISCUSSION_TEMPLATE/announcements.yml
+++ b/.github/DISCUSSION_TEMPLATE/announcements.yml
@@ -5,32 +5,26 @@ labels: ["announcement 🥳"]
 body:
   - type: markdown
     attributes:
-      value: Thanks for taking the time to fill out this issue!
+      value: Discussion Category form for Announcements.
 
   - type: dropdown
     id: type
     attributes:
-      label: Type of issue
+      label: Type of Announcement
       multiple: false
       options:
-        - 'Bug Report'
-        - 'Feature Request'
-        - 'other'
+        - 'New version'
+        - 'New feature'
+        - 'Breaking changes'
+        - 'Comunity'
+        - 'Other'
     validations:
-      required: false
+      required: true
 
   - type: textarea
     id: description
     attributes:
       label: Description
-      description: A clear and concise description of what the problem is. E.g. I'm always frustrated when [...]
-    validations:
-      required: false
-
-  - type: textarea
-    id: solution
-    attributes:
-      label: Describe the solution you'd like
-      description: A clear and concise description of what you want to happen.
+      description: Detail description of an announcement.
     validations:
       required: false
