--- a/.github/DISCUSSION_TEMPLATE/announcements.yml
+++ b/.github/DISCUSSION_TEMPLATE/announcements.yml
@@ -16,7 +16,7 @@ body:
         - 'New version'
         - 'New feature'
         - 'Breaking changes'
-        - 'Comunity'
+        - 'Community'
         - 'Other'
     validations:
       required: true
