--- a/.github/workflows/discussion-labeler.yml
+++ b/.github/workflows/discussion-labeler.yml
@@ -22,6 +22,7 @@ jobs:
         uses: stefanbuck/github-issue-parser@v3
         id: discussion-parser
         with:
+          issue-body: ${{ github.event.discussion.body }}
           template-path: .github/DISCUSSION_TEMPLATE/${{ matrix.template }}
 
       - name: Set labels based on policy
