--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -21,13 +21,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Parse issue form
-        uses: jamacku/github-issue-parser@checkboxes
+        uses: stefanbuck/github-issue-parser@v3
         id: issue-parser
         with:
           template-path: .github/ISSUE_TEMPLATE/${{ matrix.template }}
 
       - name: Set labels based on policy
-        uses: jamacku/advanced-issue-labeler@check-boxes
+        uses: jamacku/advanced-issue-labeler@graphql
         with:
           issue-form: ${{ steps.issue-parser.outputs.jsonString }}
           template: ${{ matrix.template }}
